objects/CC_Avalara_Settings__c.object
<CustomObject><fields>
        <fullName>Avalara_Address_Code_Destination__c</fullName>
        <label>Avalara_Address_Code_Destination</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Avalara_Address_Code_Origin__c</fullName>
        <label>Avalara_Address_Code_Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Avalara_Company_Code__c</fullName>
        <label>Avalara_Company_Code</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Avalara_Detail_Level__c</fullName>
        <label>Avalara_Detail_Level</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Avalara_Doc_Type__c</fullName>
        <label>Avalara_Doc_Type</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Avalara_Password__c</fullName>
        <label>Avalara_Password</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Avalara_URL__c</fullName>
        <label>Avalara_URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Avalara_Username__c</fullName>
        <label>Avalara_Username</label>
        <length>100</length>
        <type>Text</type>
    </fields><customSettingsType>List</customSettingsType><enableFeeds>false</enableFeeds><label>CC Avalara Settings</label><visibility>Public</visibility></CustomObject>